# ICSE2024-BCD-SE

./: CMakeLists.txt  README.md
examples/expr/: expr.c
examples/get_branch/: get_branch.bc  get_branch.c  klee-last
examples/get_branch/klee-out-0/: assembly.ll  info  paths.ts  run.istats  run.stats  test000001.ktest  test000002.ktest  test000003.ktest  test000004.ktest  test000005.ktest  test000006.kquery  test000006.ktest  test000007.ktest
examples/get_branch/klee-out-1/: info  messages.txt  paths.ts  run.istats  run.stats  test000001.ktest  test000002.ktest  test000003.ktest  test000004.ktest  test000005.ktest  test000006.ktest  test000008.assert.err  test000008.kquery  test000008.ktest  test000009.ktest  test000010.ktest  test000011.ktest  test000012.ktest  test000013.ktest
examples/get_branch/klee-out-2/: assembly.ll  info  messages.txt  paths.ts  run.istats  run.stats  test000001.kquery  test000001.ktest  test000001.path  test000001.ptr.err  test000002.ktest  test000002.path  test000003.ktest  test000003.path  test000004.ktest  test000004.path  test000005.ktest  test000005.path  test000006.ktest  test000006.path  test000007.ktest  test000007.path  test000008.ktest  test000008.path  test000009.ktest  test000009.path  test000010.ktest  test000010.path  test000011.ktest  test000011.path  test000012.ktest  test000012.path  test000013.ktest  test000013.path  test000014.ktest  test000014.path  test000015.ktest  test000015.path  test000016.ktest  test000016.path  (+7 more)
examples/get_sign/: a.out  behaviorStatics.txt  get_sign.bc  klee-last
examples/get_sign/klee-out-0/: info  run.istats  run.stats
examples/get_sign/klee-out-1/: assembly.ll  info  run.istats  run.stats
examples/get_sign/klee-out-2/: info  run.istats  run.stats
examples/get_sign/klee-out-3/: info  run.istats  run.stats
examples/get_sign/klee-out-4/: info  run.istats  run.stats
examples/get_sign/klee-out-5/: info  run.istats  run.stats
examples/get_sign/klee-out-6/: info  run.istats  run.stats
examples/get_sign/klee-out-7/: info  run.istats  run.stats
examples/regexp/: Regexp.bc  a.out  klee-last
examples/regexp/klee-out-0/: assembly.ll  info  paths.ts  run.istats  run.stats  test000001.path  test000002.ktest  test000002.path  warnings.txt
examples/regexp/klee-out-1/: info  paths.ts  run.istats  run.stats  test000001.ktest  test000001.path  test000002.ktest  test000003.ktest  test000003.path  test000004.ktest  test000004.path  test000005.ktest  test000005.path  test000006.ktest  test000006.path  test000007.ktest  test000007.path  test000009.ktest  test000009.path  test000010.ktest  test000010.path  test000011.ktest  test000011.path  test000012.ktest  test000012.path  test000013.ktest  test000013.path  test000014.ktest  test000014.path  test000015.ktest  test000015.path  test000016.ktest  test000016.path  test000017.ktest  test000017.path  test000018.ktest  test000018.path  test000019.ktest  test000019.path  test000020.ktest  (+13320 more)
include/klee/: ExecutionState.h  Interpreter.h
lib/Basic/: CMakeLists.txt
lib/Core/: CMakeLists.txt  ExecutionState.cpp  Executor.cpp  Executor.h  Searcher.cpp  Searcher.h  SpecialFunctionHandler.cpp
lib/Expr/: CMakeLists.txt
lib/Module/: CMakeLists.txt
lib/Support/: CMakeLists.txt
results/efficacy/: BCDSE_analyze_1.csv  BCDSE_analyze_2.csv  DGSE_analyze_1.csv  DGSE_analyze_2.csv
results/efficiency/: BCDSE_analyze_random.csv  PENDING_analyze_random.csv  out_of_time.csv
tools/klee/: CMakeLists.txt  main.cpp
